fixing icon fills / too small on programpage

--- a/src/Components/Confirmation/Confirmation.css
+++ b/src/Components/Confirmation/Confirmation.css
@@ -32,20 +32,18 @@
 }
 
 .confirmation-icon svg {
-  width: 4rem;
-  height: 4rem;
+  width: 6rem;
+  height: 6rem;
 }
 
 .confirmation-icon svg path,
 .confirmation-icon svg circle {
   stroke: var(--secondary-icon-color);
-  fill: var(--secondary-icon-color);
 }
 
 svg.confirmation-icon path,
 svg.confirmation-icon circle {
   stroke: var(--secondary-icon-color);
-  fill: var(--secondary-icon-color);
 }
 
 .MuiGrid-root.MuiGrid-item.MuiGrid-grid-xs-2.css-1o7apob-MuiGrid-root.no-padding {
