--- a/src/Components/Results/ProgramPage/ProgramPage.css
+++ b/src/Components/Results/ProgramPage/ProgramPage.css
@@ -23,21 +23,20 @@
   align-items: center;
   height: 6rem;
   width: 6rem;
-  fill: var(--secondary-background-color);
+}
+
+.header-icon-box svg {
+  width: 100%;
+  height: 100%;
 }
 
 .header-icon-box path,
 .header-icon-box rect,
 .header-icon-box circle {
-  fill: var(--icon-color);
   stroke: var(--icon-color);
 }
 
-.header-icon-lucide svg {
-  width: 3.5rem;
-  height: 3.5rem;
-}
-
+/* Lucide icons need white fill to prevent them from being filled with stroke color */
 .header-icon-lucide svg * {
   fill: white !important;
   stroke: var(--icon-color);
